[gd_scene load_steps=15 format=3 uid="uid://dyku1qhfeu8x3"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_a7rqn"]
[ext_resource type="PackedScene" uid="uid://cafsegbyfus55" path="res://Scenes/hatchet.tscn" id="2_dskbq"]
[ext_resource type="Shader" path="res://shaders/PS1.gdshader" id="3_m5j5r"]
[ext_resource type="Script" path="res://scripts/color_rect.gd" id="4_s1gsn"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_87n18"]

[sub_resource type="Skin" id="Skin_kf561"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_q1av2"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g6cvu"]
shader = ExtResource("3_m5j5r")
shader_parameter/pixel_resolution_x = 320
shader_parameter/pixel_resolution_y = 240
shader_parameter/dither_strength = 0.05
shader_parameter/color_depth = 24.0
shader_parameter/jitter_intensity = 0.0005

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kbw0i"]

[sub_resource type="Animation" id="Animation_1o6th"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Camera3D/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.03319e-09, 1.16415e-10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D/WeaponPivot/hatchet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.82868, -1.14396, -1.14544)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Camera3D/WeaponPivot/hatchet:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0400186, -1.56956, -0.030987)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.709773, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head/Camera3D/WeaponPivot/hatchet:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.166667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Head:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0170518, 0, 0)]
}

[sub_resource type="Animation" id="Animation_acyn0"]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Camera3D/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector3(-1.03319e-09, 1.16415e-10, 0), Vector3(-1.03319e-09, 2.69529, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D/WeaponPivot/hatchet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.87398, -0.67478, -0.641779)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Camera3D/WeaponPivot/hatchet:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.15989, -1.45397, -0.0337812)]
}

[sub_resource type="Animation" id="Animation_lc6hi"]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.709773, 0), Vector3(0, -0.426116, 0.896793)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D/WeaponPivot/hatchet:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.166667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.466667, 1.03333, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.0170518, 0, 0), Vector3(0.457695, 0, 0), Vector3(1.56364, 0, 0), Vector3(0.265318, -1.56338, -1.56885)]
}

[sub_resource type="Animation" id="Animation_td6pd"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Camera3D/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.03319e-09, 1.16415e-10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D/WeaponPivot/hatchet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.82868, -1.14396, -1.14544), Vector3(0.82868, -1.23963, -1.14544)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Camera3D/WeaponPivot/hatchet:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(-0.0400186, -1.56956, -0.030987), Vector3(0.0563062, -1.57266, -0.08609)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f5x3b"]
_data = {
"RESET": SubResource("Animation_1o6th"),
"attack": SubResource("Animation_acyn0"),
"death": SubResource("Animation_lc6hi"),
"idle": SubResource("Animation_td6pd")
}

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_mask = 3
floor_max_angle = 1.0472
script = ExtResource("1_a7rqn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
gi_mode = 0
mesh = SubResource("CapsuleMesh_87n18")
skin = SubResource("Skin_kf561")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_q1av2")

[node name="Head" type="Node3D" parent="." groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 0.999855, -0.017051, 0, 0.017051, 0.999855, 0, 0.709773, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00371361, 0.132357, 0.00537491)
fov = 80.0

[node name="CanvasLayer" type="CanvasLayer" parent="Head/Camera3D"]
script = ExtResource("4_s1gsn")

[node name="ColorRect" type="ColorRect" parent="Head/Camera3D/CanvasLayer"]
material = SubResource("ShaderMaterial_g6cvu")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="WeaponPivot" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(1, -1.20279e-19, 1.16415e-10, 0, 1, 1.03319e-09, -1.16415e-10, -1.03319e-09, 1, -2.32831e-09, 0, -1.20606e-07)

[node name="hatchet" parent="Head/Camera3D/WeaponPivot" instance=ExtResource("2_dskbq")]
transform = Transform3D(-2.69082e-06, 0.0280189, -0.699439, -0.0216701, 0.699104, 0.0280055, 0.699664, 0.0216528, 0.0008647, 0.82868, -1.14396, -1.14544)

[node name="Hitbox" type="Area3D" parent="Head/Camera3D/WeaponPivot/hatchet"]
transform = Transform3D(1, -5.58794e-09, -7.11508e-18, 5.58794e-09, 1, 1.27329e-09, 0, -1.27329e-09, 1, 0, 0, 5.96046e-08)
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Camera3D/WeaponPivot/hatchet/Hitbox"]
transform = Transform3D(0.0312646, -0.498622, -0.0199744, 0.498622, 0.0320156, -0.0187471, 0.0199744, -0.0187471, 0.499249, -0.0257901, 0.834002, -0.0160875)
shape = SubResource("CapsuleShape3D_kbw0i")

[node name="SpotLight3D" type="SpotLight3D" parent="Head"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f5x3b")
}
playback_default_blend_time = 0.1

[node name="Player" type="Area3D" parent="." groups=["Player"]]
collision_mask = 3

[node name="Player" type="CollisionShape3D" parent="Player" groups=["Player"]]
shape = SubResource("ConvexPolygonShape3D_q1av2")

[connection signal="area_entered" from="Head/Camera3D/WeaponPivot/hatchet/Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
